[package]
name = "faimm"
version = "0.2.0" # remember to update html_root_url
authors = ["Arno Velds <a.velds@nki.nl>"]
repository = "https://github.com/veldsla/faimm"
homepage = "https://github.com/veldsla/faimm"
documentation = "https://docs.rs/faimm/"
keywords = ["fasta", "fai", "indexed"]
categories = ["parser-implementations"]
license = "MIT"
description = "Random access to indexed fasta using a mmapped file"

[dependencies]
memmap = "0.7"
indexmap = "1.0.1"

