[package]
name = "faimm"
version = "0.5.0"
authors = ["Arno Velds <a.velds@nki.nl>"]
edition = "2021"
repository = "https://github.com/veldsla/faimm"
homepage = "https://github.com/veldsla/faimm"
documentation = "https://docs.rs/faimm/"
keywords = ["fasta", "fai", "indexed"]
categories = ["parser-implementations"]
license = "MIT"
description = "Random access to indexed fasta using a mmapped file"

[dependencies]
memmap2 = "0.9"
indexmap = "2.2.0"

